tests/ui/traits/alias/self-in-const-generics.stderr
error[E0038]: the trait alias `BB` cannot be made into an object
  --> $DIR/self-in-const-generics.rs:9:16
   |
LL | fn foo(x: &dyn BB) {}
   |                ^^ `BB` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/self-in-const-generics.rs:7:12
   |
LL | trait BB = Bar<{ 2 + 1 }>;
   |       --   ^^^^^^^^^^^^^^ ...because it uses `Self` as a type parameter
   |       |
   |       this trait cannot be made into an object...
help: consider using an opaque type instead
   |
LL | fn foo(x: &impl BB) {}
   |            ~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
